Background stretches to avoid blanks

--- a/yukisuki/style.css
+++ b/yukisuki/style.css
@@ -1,8 +1,10 @@
 body {
 	overflow: hidden;
 	background-image: url('img/water-drop-on-a-plant.jpg');
+	background-position: center center;
 	background-repeat: no-repeat;
 	background-size: cover;
+	background-attachment: fixed;
 	margin: 0;
 	padding: 0;
 }
